--- a/_posts/2024-04-17-50-jahre-sp-sursee.html
+++ b/_posts/2024-04-17-50-jahre-sp-sursee.html
@@ -4,4 +4,4 @@ title:  "50 Jahre SP Sursee"
 description: "Entdecken Sie die Entstehungsgeschichte der SP Sursee, aufbereitet in einer digitalen Timeline!"
 ---
 
-<iframe src="https://sp-sursee.github.io/timeline" scrolling="no" onload="resizeIframe(this)"></iframe>
+<iframe src="https://sp-sursee.github.io/timeline"></iframe>
